apps/freshrss/svc.yaml
apiVersion: v1
kind: Service
metadata:
  annotations: null
  labels:
    app.kubernetes.io/instance: freshrss
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: freshrss
    app.kubernetes.io/version: 1.18.1
    helm.sh/chart: freshrss-6.4.2
  name: freshrss
  namespace: freshrss
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: http
  selector:
    app.kubernetes.io/instance: freshrss
    app.kubernetes.io/name: freshrss
  type: ClusterIP
